lang/tests/contract/ui/fail/16-invalid-parameter-type.stderr
error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_Input_Type` is not satisfied
  --> tests/contract/ui/fail/16-invalid-parameter-type.rs:12:35
   |
12 |         pub fn noop(&self, value: f32) {}
   |                                   ^^^ the trait `You_Should_Use_An_Valid_Input_Type` is not implemented for `f32`
   |
   = help: the following other types implement trait `You_Should_Use_An_Valid_Input_Type`:
             i128
             i16
             i32
             i64
             i8
             u128
             u16
             u32
           and $N others
